[tool.poetry]
name = "typo-corrector"
version = "0.1.0"
description = ""
authors = ["Jidhu Mohan <jidhu.mohan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "1.1"
regex = "^2022.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
